// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MultipleChoiceList /> should render correctly 1`] = `
<FormRenderer
  FormTemplate={[Function]}
  clearOnUnmount={false}
  componentMapper={
    Object {
      "checkbox": [Function],
    }
  }
  initialValues={Object {}}
  onSubmit={[Function]}
  schema={
    Object {
      "fields": Array [
        Object {
          "component": "checkbox",
          "name": "checkbox",
          "options": Array [
            Object {
              "label": "Foo",
              "value": 0,
            },
            Object {
              "label": "Bar",
              "value": 1,
            },
          ],
        },
      ],
    }
  }
>
  <Component
    clearOnUnmount={false}
    initialValues={Object {}}
    onSubmit={[Function]}
    render={[Function]}
    subscription={
      Object {
        "pristine": true,
        "submitting": true,
        "valid": true,
      }
    }
  >
    <PF3FormTemplate
      formFields={
        Array [
          <SingleField
            component="checkbox"
            name="checkbox"
            options={
              Array [
                Object {
                  "label": "Foo",
                  "value": 0,
                },
                Object {
                  "label": "Bar",
                  "value": 1,
                },
              ]
            }
          />,
        ]
      }
      schema={
        Object {
          "fields": Array [
            Object {
              "component": "checkbox",
              "name": "checkbox",
              "options": Array [
                Object {
                  "label": "Foo",
                  "value": 0,
                },
                Object {
                  "label": "Bar",
                  "value": 1,
                },
              ],
            },
          ],
        }
      }
    >
      <FormTemplate
        Button={[Function]}
        ButtonGroup={[Function]}
        Description={[Function]}
        FormWrapper={[Function]}
        Header={Symbol(react.fragment)}
        Title={[Function]}
        disableSubmit={Array []}
        formFields={
          Array [
            <SingleField
              component="checkbox"
              name="checkbox"
              options={
                Array [
                  Object {
                    "label": "Foo",
                    "value": 0,
                  },
                  Object {
                    "label": "Bar",
                    "value": 1,
                  },
                ]
              }
            />,
          ]
        }
        schema={
          Object {
            "fields": Array [
              Object {
                "component": "checkbox",
                "name": "checkbox",
                "options": Array [
                  Object {
                    "label": "Foo",
                    "value": 0,
                  },
                  Object {
                    "label": "Bar",
                    "value": 1,
                  },
                ],
              },
            ],
          }
        }
        showFormControls={true}
      >
        <FormWrapper
          onSubmit={[Function]}
        >
          <Form
            bsClass="form"
            className="ddorg__pf3-layout-components__form-wrapper"
            componentClass="form"
            horizontal={false}
            inline={false}
            onSubmit={[Function]}
          >
            <form
              className="ddorg__pf3-layout-components__form-wrapper"
              onSubmit={[Function]}
            >
              <SingleField
                component="checkbox"
                key="checkbox"
                name="checkbox"
                options={
                  Array [
                    Object {
                      "label": "Foo",
                      "value": 0,
                    },
                    Object {
                      "label": "Bar",
                      "value": 1,
                    },
                  ]
                }
              >
                <FormConditionWrapper
                  field={
                    Object {
                      "component": "checkbox",
                      "name": "checkbox",
                      "options": Array [
                        Object {
                          "label": "Foo",
                          "value": 0,
                        },
                        Object {
                          "label": "Bar",
                          "value": 1,
                        },
                      ],
                    }
                  }
                >
                  <FormFieldHideWrapper
                    hideField={false}
                  >
                    <Checkbox
                      component="checkbox"
                      name="checkbox"
                      options={
                        Array [
                          Object {
                            "label": "Foo",
                            "value": 0,
                          },
                          Object {
                            "label": "Bar",
                            "value": 1,
                          },
                        ]
                      }
                    >
                      <MultipleChoiceList
                        component="checkbox"
                        name="checkbox"
                        options={
                          Array [
                            Object {
                              "label": "Foo",
                              "value": 0,
                            },
                            Object {
                              "label": "Bar",
                              "value": 1,
                            },
                          ]
                        }
                      >
                        <MultipleChoiceList
                          Checkbox={[Function]}
                          Wrapper={[Function]}
                          component="checkbox"
                          name="checkbox"
                          options={
                            Array [
                              Object {
                                "label": "Foo",
                                "value": 0,
                              },
                              Object {
                                "label": "Bar",
                                "value": 1,
                              },
                            ]
                          }
                        >
                          <Wrapper
                            meta={
                              Object {
                                "active": false,
                                "data": Object {},
                                "dirty": false,
                                "dirtySinceLastSubmit": false,
                                "error": undefined,
                                "initial": undefined,
                                "invalid": false,
                                "modified": false,
                                "modifiedSinceLastSubmit": false,
                                "pristine": true,
                                "submitError": undefined,
                                "submitFailed": false,
                                "submitSucceeded": false,
                                "submitting": false,
                                "touched": false,
                                "valid": true,
                                "validating": false,
                                "visited": false,
                                "warning": undefined,
                              }
                            }
                            name="checkbox"
                            rest={
                              Object {
                                "name": "checkbox",
                              }
                            }
                            showError={false}
                          >
                            <FormGroup
                              bsClass="form-group"
                              validationState={null}
                            >
                              <div
                                className="form-group"
                              >
                                <ControlLabel
                                  bsClass="control-label"
                                  srOnly={false}
                                >
                                  <label
                                    className="control-label"
                                  />
                                </ControlLabel>
                                <div>
                                  <SingleCheckbox
                                    Checkbox={[Function]}
                                    aria-label="Foo"
                                    id="checkbox-0"
                                    key="checkbox-0"
                                    label="Foo"
                                    name="checkbox"
                                    option={
                                      Object {
                                        "label": "Foo",
                                        "value": 0,
                                      }
                                    }
                                    value={0}
                                  >
                                    <FinalCheckbox
                                      aria-label="Foo"
                                      checked={false}
                                      id="checkbox-0"
                                      label="Foo"
                                      meta={
                                        Object {
                                          "active": false,
                                          "data": Object {},
                                          "dirty": false,
                                          "dirtySinceLastSubmit": false,
                                          "error": undefined,
                                          "initial": undefined,
                                          "invalid": false,
                                          "modified": false,
                                          "modifiedSinceLastSubmit": false,
                                          "pristine": true,
                                          "submitError": undefined,
                                          "submitFailed": false,
                                          "submitSucceeded": false,
                                          "submitting": false,
                                          "touched": false,
                                          "valid": true,
                                          "validating": false,
                                          "visited": false,
                                          "warning": undefined,
                                        }
                                      }
                                      name="checkbox"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      onFocus={[Function]}
                                      option={
                                        Object {
                                          "label": "Foo",
                                          "value": 0,
                                        }
                                      }
                                      type="checkbox"
                                      value={0}
                                    >
                                      <Checkbox
                                        aria-label="Foo"
                                        bsClass="checkbox"
                                        checked={false}
                                        disabled={false}
                                        id="checkbox-0"
                                        inline={false}
                                        meta={
                                          Object {
                                            "active": false,
                                            "data": Object {},
                                            "dirty": false,
                                            "dirtySinceLastSubmit": false,
                                            "error": undefined,
                                            "initial": undefined,
                                            "invalid": false,
                                            "modified": false,
                                            "modifiedSinceLastSubmit": false,
                                            "pristine": true,
                                            "submitError": undefined,
                                            "submitFailed": false,
                                            "submitSucceeded": false,
                                            "submitting": false,
                                            "touched": false,
                                            "valid": true,
                                            "validating": false,
                                            "visited": false,
                                            "warning": undefined,
                                          }
                                        }
                                        name="checkbox"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        option={
                                          Object {
                                            "label": "Foo",
                                            "value": 0,
                                          }
                                        }
                                        title=""
                                        type="checkbox"
                                        value={0}
                                      >
                                        <div
                                          className="checkbox"
                                        >
                                          <label
                                            title=""
                                          >
                                            <input
                                              aria-label="Foo"
                                              checked={false}
                                              disabled={false}
                                              id="checkbox-0"
                                              meta={
                                                Object {
                                                  "active": false,
                                                  "data": Object {},
                                                  "dirty": false,
                                                  "dirtySinceLastSubmit": false,
                                                  "error": undefined,
                                                  "initial": undefined,
                                                  "invalid": false,
                                                  "modified": false,
                                                  "modifiedSinceLastSubmit": false,
                                                  "pristine": true,
                                                  "submitError": undefined,
                                                  "submitFailed": false,
                                                  "submitSucceeded": false,
                                                  "submitting": false,
                                                  "touched": false,
                                                  "valid": true,
                                                  "validating": false,
                                                  "visited": false,
                                                  "warning": undefined,
                                                }
                                              }
                                              name="checkbox"
                                              onBlur={[Function]}
                                              onChange={[Function]}
                                              onFocus={[Function]}
                                              option={
                                                Object {
                                                  "label": "Foo",
                                                  "value": 0,
                                                }
                                              }
                                              type="checkbox"
                                              value={0}
                                            />
                                            Foo
                                          </label>
                                        </div>
                                      </Checkbox>
                                    </FinalCheckbox>
                                  </SingleCheckbox>
                                  <SingleCheckbox
                                    Checkbox={[Function]}
                                    aria-label="Bar"
                                    id="checkbox-1"
                                    key="checkbox-1"
                                    label="Bar"
                                    name="checkbox"
                                    option={
                                      Object {
                                        "label": "Bar",
                                        "value": 1,
                                      }
                                    }
                                    value={1}
                                  >
                                    <FinalCheckbox
                                      aria-label="Bar"
                                      checked={false}
                                      id="checkbox-1"
                                      label="Bar"
                                      meta={
                                        Object {
                                          "active": false,
                                          "data": Object {},
                                          "dirty": false,
                                          "dirtySinceLastSubmit": false,
                                          "error": undefined,
                                          "initial": undefined,
                                          "invalid": false,
                                          "modified": false,
                                          "modifiedSinceLastSubmit": false,
                                          "pristine": true,
                                          "submitError": undefined,
                                          "submitFailed": false,
                                          "submitSucceeded": false,
                                          "submitting": false,
                                          "touched": false,
                                          "valid": true,
                                          "validating": false,
                                          "visited": false,
                                          "warning": undefined,
                                        }
                                      }
                                      name="checkbox"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      onFocus={[Function]}
                                      option={
                                        Object {
                                          "label": "Bar",
                                          "value": 1,
                                        }
                                      }
                                      type="checkbox"
                                      value={1}
                                    >
                                      <Checkbox
                                        aria-label="Bar"
                                        bsClass="checkbox"
                                        checked={false}
                                        disabled={false}
                                        id="checkbox-1"
                                        inline={false}
                                        meta={
                                          Object {
                                            "active": false,
                                            "data": Object {},
                                            "dirty": false,
                                            "dirtySinceLastSubmit": false,
                                            "error": undefined,
                                            "initial": undefined,
                                            "invalid": false,
                                            "modified": false,
                                            "modifiedSinceLastSubmit": false,
                                            "pristine": true,
                                            "submitError": undefined,
                                            "submitFailed": false,
                                            "submitSucceeded": false,
                                            "submitting": false,
                                            "touched": false,
                                            "valid": true,
                                            "validating": false,
                                            "visited": false,
                                            "warning": undefined,
                                          }
                                        }
                                        name="checkbox"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        option={
                                          Object {
                                            "label": "Bar",
                                            "value": 1,
                                          }
                                        }
                                        title=""
                                        type="checkbox"
                                        value={1}
                                      >
                                        <div
                                          className="checkbox"
                                        >
                                          <label
                                            title=""
                                          >
                                            <input
                                              aria-label="Bar"
                                              checked={false}
                                              disabled={false}
                                              id="checkbox-1"
                                              meta={
                                                Object {
                                                  "active": false,
                                                  "data": Object {},
                                                  "dirty": false,
                                                  "dirtySinceLastSubmit": false,
                                                  "error": undefined,
                                                  "initial": undefined,
                                                  "invalid": false,
                                                  "modified": false,
                                                  "modifiedSinceLastSubmit": false,
                                                  "pristine": true,
                                                  "submitError": undefined,
                                                  "submitFailed": false,
                                                  "submitSucceeded": false,
                                                  "submitting": false,
                                                  "touched": false,
                                                  "valid": true,
                                                  "validating": false,
                                                  "visited": false,
                                                  "warning": undefined,
                                                }
                                              }
                                              name="checkbox"
                                              onBlur={[Function]}
                                              onChange={[Function]}
                                              onFocus={[Function]}
                                              option={
                                                Object {
                                                  "label": "Bar",
                                                  "value": 1,
                                                }
                                              }
                                              type="checkbox"
                                              value={1}
                                            />
                                            Bar
                                          </label>
                                        </div>
                                      </Checkbox>
                                    </FinalCheckbox>
                                  </SingleCheckbox>
                                </div>
                              </div>
                            </FormGroup>
                          </Wrapper>
                        </MultipleChoiceList>
                      </MultipleChoiceList>
                    </Checkbox>
                  </FormFieldHideWrapper>
                </FormConditionWrapper>
              </SingleField>
              <Component>
                <FormControls
                  Button={[Function]}
                  ButtonGroup={[Function]}
                  FormSpy={[Function]}
                  buttonOrder={
                    Array [
                      "submit",
                      "reset",
                      "cancel",
                    ]
                  }
                  buttonsProps={Object {}}
                  canReset={false}
                  canSubmit={false}
                  cancelLabel="Cancel"
                  formFields={
                    Array [
                      <SingleField
                        component="checkbox"
                        name="checkbox"
                        options={
                          Array [
                            Object {
                              "label": "Foo",
                              "value": 0,
                            },
                            Object {
                              "label": "Bar",
                              "value": 1,
                            },
                          ]
                        }
                      />,
                    ]
                  }
                  formSpyProps={
                    Object {
                      "active": undefined,
                      "afterSilentRegistration": [Function],
                      "batch": [Function],
                      "blur": [Function],
                      "change": [Function],
                      "destroyOnUnregister": undefined,
                      "dirty": false,
                      "dirtyFields": Object {},
                      "dirtyFieldsSinceLastSubmit": Object {},
                      "dirtySinceLastSubmit": false,
                      "error": undefined,
                      "errors": Object {},
                      "fieldListeners": Object {
                        "1606921360405": Object {
                          "count": 1,
                          "fields": Object {
                            "1606921360405": Object {
                              "afterSubmit": undefined,
                              "beforeSubmit": undefined,
                              "isEqual": undefined,
                              "render": [Function],
                              "subscription": Object {
                                "all": true,
                              },
                              "validate": undefined,
                            },
                          },
                          "validateFields": undefined,
                        },
                        "1606921392384": Object {
                          "count": 1,
                          "fields": Object {
                            "1606921392384": Object {
                              "afterSubmit": undefined,
                              "beforeSubmit": undefined,
                              "isEqual": undefined,
                              "render": [Function],
                              "subscription": Object {
                                "pristine": true,
                                "submitting": true,
                                "valid": true,
                              },
                              "validate": undefined,
                            },
                          },
                          "validateFields": undefined,
                        },
                        "checkbox": Object {
                          "asyncWatcher": Object {
                            "registerValidator": [Function],
                          },
                          "count": 3,
                          "fields": Object {
                            "1606921360580": Object {
                              "afterSubmit": undefined,
                              "beforeSubmit": undefined,
                              "isEqual": undefined,
                              "render": [Function],
                              "subscription": undefined,
                              "validate": undefined,
                            },
                            "1606921383265": Object {
                              "afterSubmit": undefined,
                              "beforeSubmit": undefined,
                              "isEqual": undefined,
                              "render": [Function],
                              "subscription": undefined,
                              "validate": undefined,
                            },
                            "1606921390671": Object {
                              "afterSubmit": undefined,
                              "beforeSubmit": undefined,
                              "isEqual": undefined,
                              "render": [Function],
                              "subscription": undefined,
                              "validate": undefined,
                            },
                          },
                          "state": Object {
                            "meta": Object {
                              "active": false,
                              "data": Object {},
                              "dirty": false,
                              "dirtySinceLastSubmit": false,
                              "error": undefined,
                              "initial": undefined,
                              "invalid": false,
                              "modified": false,
                              "modifiedSinceLastSubmit": false,
                              "pristine": true,
                              "submitError": undefined,
                              "submitFailed": false,
                              "submitSucceeded": false,
                              "submitting": false,
                              "touched": false,
                              "valid": true,
                              "validating": false,
                              "visited": false,
                              "warning": undefined,
                            },
                            "name": "checkbox",
                            "value": undefined,
                          },
                          "validateFields": undefined,
                        },
                      },
                      "fileInputs": Array [],
                      "focus": [Function],
                      "form": Object {
                        "active": undefined,
                        "afterSilentRegistration": [Function],
                        "batch": [Function],
                        "blur": [Function],
                        "change": [Function],
                        "destroyOnUnregister": undefined,
                        "dirty": false,
                        "dirtyFields": Object {},
                        "dirtyFieldsSinceLastSubmit": Object {},
                        "dirtySinceLastSubmit": false,
                        "error": undefined,
                        "errors": Object {},
                        "fieldListeners": Object {
                          "1606921360405": Object {
                            "count": 1,
                            "fields": Object {
                              "1606921360405": Object {
                                "afterSubmit": undefined,
                                "beforeSubmit": undefined,
                                "isEqual": undefined,
                                "render": [Function],
                                "subscription": Object {
                                  "all": true,
                                },
                                "validate": undefined,
                              },
                            },
                            "validateFields": undefined,
                          },
                          "1606921392384": Object {
                            "count": 1,
                            "fields": Object {
                              "1606921392384": Object {
                                "afterSubmit": undefined,
                                "beforeSubmit": undefined,
                                "isEqual": undefined,
                                "render": [Function],
                                "subscription": Object {
                                  "pristine": true,
                                  "submitting": true,
                                  "valid": true,
                                },
                                "validate": undefined,
                              },
                            },
                            "validateFields": undefined,
                          },
                          "checkbox": Object {
                            "asyncWatcher": Object {
                              "registerValidator": [Function],
                            },
                            "count": 3,
                            "fields": Object {
                              "1606921360580": Object {
                                "afterSubmit": undefined,
                                "beforeSubmit": undefined,
                                "isEqual": undefined,
                                "render": [Function],
                                "subscription": undefined,
                                "validate": undefined,
                              },
                              "1606921383265": Object {
                                "afterSubmit": undefined,
                                "beforeSubmit": undefined,
                                "isEqual": undefined,
                                "render": [Function],
                                "subscription": undefined,
                                "validate": undefined,
                              },
                              "1606921390671": Object {
                                "afterSubmit": undefined,
                                "beforeSubmit": undefined,
                                "isEqual": undefined,
                                "render": [Function],
                                "subscription": undefined,
                                "validate": undefined,
                              },
                            },
                            "state": Object {
                              "meta": Object {
                                "active": false,
                                "data": Object {},
                                "dirty": false,
                                "dirtySinceLastSubmit": false,
                                "error": undefined,
                                "initial": undefined,
                                "invalid": false,
                                "modified": false,
                                "modifiedSinceLastSubmit": false,
                                "pristine": true,
                                "submitError": undefined,
                                "submitFailed": false,
                                "submitSucceeded": false,
                                "submitting": false,
                                "touched": false,
                                "valid": true,
                                "validating": false,
                                "visited": false,
                                "warning": undefined,
                              },
                              "name": "checkbox",
                              "value": undefined,
                            },
                            "validateFields": undefined,
                          },
                        },
                        "fileInputs": Array [],
                        "focus": [Function],
                        "getFieldState": [Function],
                        "getFieldValue": [Function],
                        "getRegisteredFields": [Function],
                        "getState": [Function],
                        "handleSubmit": [Function],
                        "hasSubmitErrors": false,
                        "hasValidationErrors": false,
                        "initialValues": Object {},
                        "initialize": [Function],
                        "invalid": false,
                        "isValidationPaused": [Function],
                        "modified": Object {},
                        "modifiedSinceLastSubmit": false,
                        "pauseValidation": [Function],
                        "pristine": true,
                        "registerAsyncValidator": [Function],
                        "registerField": [Function],
                        "registerInputFile": [Function],
                        "registeredFields": Array [
                          "checkbox",
                        ],
                        "rerender": [Function],
                        "reset": [Function],
                        "resetFieldState": [Function],
                        "restart": [Function],
                        "resumeValidation": [Function],
                        "setConfig": [Function],
                        "setFieldState": [Function],
                        "submit": [Function],
                        "submitError": undefined,
                        "submitErrors": undefined,
                        "submitFailed": false,
                        "submitSucceeded": false,
                        "submitting": false,
                        "subscribe": [Function],
                        "touched": Object {},
                        "unregisterField": [Function],
                        "unregisterInputFile": [Function],
                        "unsubscribe": [Function],
                        "updateError": [Function],
                        "updateValid": [Function],
                        "valid": true,
                        "validating": false,
                        "values": Object {},
                        "visited": Object {},
                      },
                      "getFieldState": [Function],
                      "getFieldValue": [Function],
                      "getRegisteredFields": [Function],
                      "getState": [Function],
                      "handleSubmit": [Function],
                      "hasSubmitErrors": false,
                      "hasValidationErrors": false,
                      "initialValues": Object {},
                      "initialize": [Function],
                      "invalid": false,
                      "isValidationPaused": [Function],
                      "modified": Object {},
                      "modifiedSinceLastSubmit": false,
                      "pauseValidation": [Function],
                      "pristine": true,
                      "registerAsyncValidator": [Function],
                      "registerField": [Function],
                      "registerInputFile": [Function],
                      "registeredFields": Array [
                        "checkbox",
                      ],
                      "rerender": [Function],
                      "reset": [Function],
                      "resetFieldState": [Function],
                      "restart": [Function],
                      "resumeValidation": [Function],
                      "setConfig": [Function],
                      "setFieldState": [Function],
                      "submit": [Function],
                      "submitError": undefined,
                      "submitErrors": undefined,
                      "submitFailed": false,
                      "submitSucceeded": false,
                      "submitting": false,
                      "subscribe": [Function],
                      "touched": Object {},
                      "unregisterField": [Function],
                      "unregisterInputFile": [Function],
                      "unsubscribe": [Function],
                      "updateError": [Function],
                      "updateValid": [Function],
                      "valid": true,
                      "validating": false,
                      "values": Object {},
                      "visited": Object {},
                    }
                  }
                  onReset={[Function]}
                  resetLabel="Reset"
                  schema={
                    Object {
                      "fields": Array [
                        Object {
                          "component": "checkbox",
                          "name": "checkbox",
                          "options": Array [
                            Object {
                              "label": "Foo",
                              "value": 0,
                            },
                            Object {
                              "label": "Bar",
                              "value": 1,
                            },
                          ],
                        },
                      ],
                    }
                  }
                  submitLabel="Submit"
                >
                  <ButtonGroup
                    className=""
                  >
                    <div
                      className="ddorg__pf3-layout-components__button-group "
                    >
                      <Button
                        buttonType="submit"
                        key="form-submit"
                        label="Submit"
                        type="submit"
                        variant="primary"
                      >
                        <Button
                          active={false}
                          block={false}
                          bsClass="btn"
                          bsStyle="primary"
                          disabled={false}
                          type="submit"
                        >
                          <button
                            className="btn btn-primary"
                            disabled={false}
                            type="submit"
                          >
                            Submit
                          </button>
                        </Button>
                      </Button>
                    </div>
                  </ButtonGroup>
                </FormControls>
              </Component>
            </form>
          </Form>
        </FormWrapper>
      </FormTemplate>
    </PF3FormTemplate>
  </Component>
</FormRenderer>
`;

exports[`<MultipleChoiceList /> should render in error state 1`] = `
<FormRenderer
  FormTemplate={[Function]}
  clearOnUnmount={false}
  componentMapper={
    Object {
      "checkbox": [Function],
    }
  }
  initialValues={Object {}}
  onSubmit={[Function]}
  schema={
    Object {
      "fields": Array [
        Object {
          "component": "checkbox",
          "name": "checkbox",
          "options": Array [
            Object {
              "label": "Foo",
              "value": 0,
            },
            Object {
              "label": "Bar",
              "value": 1,
            },
          ],
          "validate": Array [
            Object {
              "type": "required",
            },
          ],
        },
      ],
    }
  }
>
  <Component
    clearOnUnmount={false}
    initialValues={Object {}}
    onSubmit={[Function]}
    render={[Function]}
    subscription={
      Object {
        "pristine": true,
        "submitting": true,
        "valid": true,
      }
    }
  >
    <PF3FormTemplate
      formFields={
        Array [
          <SingleField
            component="checkbox"
            name="checkbox"
            options={
              Array [
                Object {
                  "label": "Foo",
                  "value": 0,
                },
                Object {
                  "label": "Bar",
                  "value": 1,
                },
              ]
            }
            validate={
              Array [
                Object {
                  "type": "required",
                },
              ]
            }
          />,
        ]
      }
      schema={
        Object {
          "fields": Array [
            Object {
              "component": "checkbox",
              "name": "checkbox",
              "options": Array [
                Object {
                  "label": "Foo",
                  "value": 0,
                },
                Object {
                  "label": "Bar",
                  "value": 1,
                },
              ],
              "validate": Array [
                Object {
                  "type": "required",
                },
              ],
            },
          ],
        }
      }
    >
      <FormTemplate
        Button={[Function]}
        ButtonGroup={[Function]}
        Description={[Function]}
        FormWrapper={[Function]}
        Header={Symbol(react.fragment)}
        Title={[Function]}
        disableSubmit={Array []}
        formFields={
          Array [
            <SingleField
              component="checkbox"
              name="checkbox"
              options={
                Array [
                  Object {
                    "label": "Foo",
                    "value": 0,
                  },
                  Object {
                    "label": "Bar",
                    "value": 1,
                  },
                ]
              }
              validate={
                Array [
                  Object {
                    "type": "required",
                  },
                ]
              }
            />,
          ]
        }
        schema={
          Object {
            "fields": Array [
              Object {
                "component": "checkbox",
                "name": "checkbox",
                "options": Array [
                  Object {
                    "label": "Foo",
                    "value": 0,
                  },
                  Object {
                    "label": "Bar",
                    "value": 1,
                  },
                ],
                "validate": Array [
                  Object {
                    "type": "required",
                  },
                ],
              },
            ],
          }
        }
        showFormControls={true}
      >
        <FormWrapper
          onSubmit={[Function]}
        >
          <Form
            bsClass="form"
            className="ddorg__pf3-layout-components__form-wrapper"
            componentClass="form"
            horizontal={false}
            inline={false}
            onSubmit={[Function]}
          >
            <form
              className="ddorg__pf3-layout-components__form-wrapper"
              onSubmit={[Function]}
            >
              <SingleField
                component="checkbox"
                key="checkbox"
                name="checkbox"
                options={
                  Array [
                    Object {
                      "label": "Foo",
                      "value": 0,
                    },
                    Object {
                      "label": "Bar",
                      "value": 1,
                    },
                  ]
                }
                validate={
                  Array [
                    Object {
                      "type": "required",
                    },
                  ]
                }
              >
                <FormConditionWrapper
                  field={
                    Object {
                      "component": "checkbox",
                      "name": "checkbox",
                      "options": Array [
                        Object {
                          "label": "Foo",
                          "value": 0,
                        },
                        Object {
                          "label": "Bar",
                          "value": 1,
                        },
                      ],
                      "validate": Array [
                        Object {
                          "type": "required",
                        },
                      ],
                    }
                  }
                >
                  <FormFieldHideWrapper
                    hideField={false}
                  >
                    <Checkbox
                      component="checkbox"
                      name="checkbox"
                      options={
                        Array [
                          Object {
                            "label": "Foo",
                            "value": 0,
                          },
                          Object {
                            "label": "Bar",
                            "value": 1,
                          },
                        ]
                      }
                      validate={
                        Array [
                          Object {
                            "type": "required",
                          },
                        ]
                      }
                    >
                      <MultipleChoiceList
                        component="checkbox"
                        name="checkbox"
                        options={
                          Array [
                            Object {
                              "label": "Foo",
                              "value": 0,
                            },
                            Object {
                              "label": "Bar",
                              "value": 1,
                            },
                          ]
                        }
                        validate={
                          Array [
                            Object {
                              "type": "required",
                            },
                          ]
                        }
                      >
                        <MultipleChoiceList
                          Checkbox={[Function]}
                          Wrapper={[Function]}
                          component="checkbox"
                          name="checkbox"
                          options={
                            Array [
                              Object {
                                "label": "Foo",
                                "value": 0,
                              },
                              Object {
                                "label": "Bar",
                                "value": 1,
                              },
                            ]
                          }
                          validate={
                            Array [
                              Object {
                                "type": "required",
                              },
                            ]
                          }
                        >
                          <Wrapper
                            error="Required"
                            meta={
                              Object {
                                "active": false,
                                "data": Object {},
                                "dirty": false,
                                "dirtySinceLastSubmit": false,
                                "error": "Required",
                                "initial": undefined,
                                "invalid": true,
                                "modified": false,
                                "modifiedSinceLastSubmit": false,
                                "pristine": true,
                                "submitError": undefined,
                                "submitFailed": false,
                                "submitSucceeded": false,
                                "submitting": false,
                                "touched": true,
                                "valid": false,
                                "validating": false,
                                "visited": false,
                                "warning": undefined,
                              }
                            }
                            name="checkbox"
                            rest={
                              Object {
                                "name": "checkbox",
                              }
                            }
                            showError="Required"
                          >
                            <FormGroup
                              bsClass="form-group"
                              validationState="error"
                            >
                              <div
                                className="form-group has-error"
                              >
                                <ControlLabel
                                  bsClass="control-label"
                                  srOnly={false}
                                >
                                  <label
                                    className="control-label"
                                  />
                                </ControlLabel>
                                <div>
                                  <SingleCheckbox
                                    Checkbox={[Function]}
                                    aria-label="Foo"
                                    id="checkbox-0"
                                    key="checkbox-0"
                                    label="Foo"
                                    name="checkbox"
                                    option={
                                      Object {
                                        "label": "Foo",
                                        "value": 0,
                                      }
                                    }
                                    value={0}
                                  >
                                    <FinalCheckbox
                                      aria-label="Foo"
                                      checked={false}
                                      id="checkbox-0"
                                      label="Foo"
                                      meta={
                                        Object {
                                          "active": false,
                                          "data": Object {},
                                          "dirty": false,
                                          "dirtySinceLastSubmit": false,
                                          "error": "Required",
                                          "initial": undefined,
                                          "invalid": true,
                                          "modified": false,
                                          "modifiedSinceLastSubmit": false,
                                          "pristine": true,
                                          "submitError": undefined,
                                          "submitFailed": false,
                                          "submitSucceeded": false,
                                          "submitting": false,
                                          "touched": true,
                                          "valid": false,
                                          "validating": false,
                                          "visited": false,
                                          "warning": undefined,
                                        }
                                      }
                                      name="checkbox"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      onFocus={[Function]}
                                      option={
                                        Object {
                                          "label": "Foo",
                                          "value": 0,
                                        }
                                      }
                                      type="checkbox"
                                      value={0}
                                    >
                                      <Checkbox
                                        aria-label="Foo"
                                        bsClass="checkbox"
                                        checked={false}
                                        disabled={false}
                                        id="checkbox-0"
                                        inline={false}
                                        meta={
                                          Object {
                                            "active": false,
                                            "data": Object {},
                                            "dirty": false,
                                            "dirtySinceLastSubmit": false,
                                            "error": "Required",
                                            "initial": undefined,
                                            "invalid": true,
                                            "modified": false,
                                            "modifiedSinceLastSubmit": false,
                                            "pristine": true,
                                            "submitError": undefined,
                                            "submitFailed": false,
                                            "submitSucceeded": false,
                                            "submitting": false,
                                            "touched": true,
                                            "valid": false,
                                            "validating": false,
                                            "visited": false,
                                            "warning": undefined,
                                          }
                                        }
                                        name="checkbox"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        option={
                                          Object {
                                            "label": "Foo",
                                            "value": 0,
                                          }
                                        }
                                        title=""
                                        type="checkbox"
                                        value={0}
                                      >
                                        <div
                                          className="checkbox"
                                        >
                                          <label
                                            title=""
                                          >
                                            <input
                                              aria-label="Foo"
                                              checked={false}
                                              disabled={false}
                                              id="checkbox-0"
                                              meta={
                                                Object {
                                                  "active": false,
                                                  "data": Object {},
                                                  "dirty": false,
                                                  "dirtySinceLastSubmit": false,
                                                  "error": "Required",
                                                  "initial": undefined,
                                                  "invalid": true,
                                                  "modified": false,
                                                  "modifiedSinceLastSubmit": false,
                                                  "pristine": true,
                                                  "submitError": undefined,
                                                  "submitFailed": false,
                                                  "submitSucceeded": false,
                                                  "submitting": false,
                                                  "touched": true,
                                                  "valid": false,
                                                  "validating": false,
                                                  "visited": false,
                                                  "warning": undefined,
                                                }
                                              }
                                              name="checkbox"
                                              onBlur={[Function]}
                                              onChange={[Function]}
                                              onFocus={[Function]}
                                              option={
                                                Object {
                                                  "label": "Foo",
                                                  "value": 0,
                                                }
                                              }
                                              type="checkbox"
                                              value={0}
                                            />
                                            Foo
                                          </label>
                                        </div>
                                      </Checkbox>
                                    </FinalCheckbox>
                                  </SingleCheckbox>
                                  <SingleCheckbox
                                    Checkbox={[Function]}
                                    aria-label="Bar"
                                    id="checkbox-1"
                                    key="checkbox-1"
                                    label="Bar"
                                    name="checkbox"
                                    option={
                                      Object {
                                        "label": "Bar",
                                        "value": 1,
                                      }
                                    }
                                    value={1}
                                  >
                                    <FinalCheckbox
                                      aria-label="Bar"
                                      checked={false}
                                      id="checkbox-1"
                                      label="Bar"
                                      meta={
                                        Object {
                                          "active": false,
                                          "data": Object {},
                                          "dirty": false,
                                          "dirtySinceLastSubmit": false,
                                          "error": "Required",
                                          "initial": undefined,
                                          "invalid": true,
                                          "modified": false,
                                          "modifiedSinceLastSubmit": false,
                                          "pristine": true,
                                          "submitError": undefined,
                                          "submitFailed": false,
                                          "submitSucceeded": false,
                                          "submitting": false,
                                          "touched": true,
                                          "valid": false,
                                          "validating": false,
                                          "visited": false,
                                          "warning": undefined,
                                        }
                                      }
                                      name="checkbox"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      onFocus={[Function]}
                                      option={
                                        Object {
                                          "label": "Bar",
                                          "value": 1,
                                        }
                                      }
                                      type="checkbox"
                                      value={1}
                                    >
                                      <Checkbox
                                        aria-label="Bar"
                                        bsClass="checkbox"
                                        checked={false}
                                        disabled={false}
                                        id="checkbox-1"
                                        inline={false}
                                        meta={
                                          Object {
                                            "active": false,
                                            "data": Object {},
                                            "dirty": false,
                                            "dirtySinceLastSubmit": false,
                                            "error": "Required",
                                            "initial": undefined,
                                            "invalid": true,
                                            "modified": false,
                                            "modifiedSinceLastSubmit": false,
                                            "pristine": true,
                                            "submitError": undefined,
                                            "submitFailed": false,
                                            "submitSucceeded": false,
                                            "submitting": false,
                                            "touched": true,
                                            "valid": false,
                                            "validating": false,
                                            "visited": false,
                                            "warning": undefined,
                                          }
                                        }
                                        name="checkbox"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        option={
                                          Object {
                                            "label": "Bar",
                                            "value": 1,
                                          }
                                        }
                                        title=""
                                        type="checkbox"
                                        value={1}
                                      >
                                        <div
                                          className="checkbox"
                                        >
                                          <label
                                            title=""
                                          >
                                            <input
                                              aria-label="Bar"
                                              checked={false}
                                              disabled={false}
                                              id="checkbox-1"
                                              meta={
                                                Object {
                                                  "active": false,
                                                  "data": Object {},
                                                  "dirty": false,
                                                  "dirtySinceLastSubmit": false,
                                                  "error": "Required",
                                                  "initial": undefined,
                                                  "invalid": true,
                                                  "modified": false,
                                                  "modifiedSinceLastSubmit": false,
                                                  "pristine": true,
                                                  "submitError": undefined,
                                                  "submitFailed": false,
                                                  "submitSucceeded": false,
                                                  "submitting": false,
                                                  "touched": true,
                                                  "valid": false,
                                                  "validating": false,
                                                  "visited": false,
                                                  "warning": undefined,
                                                }
                                              }
                                              name="checkbox"
                                              onBlur={[Function]}
                                              onChange={[Function]}
                                              onFocus={[Function]}
                                              option={
                                                Object {
                                                  "label": "Bar",
                                                  "value": 1,
                                                }
                                              }
                                              type="checkbox"
                                              value={1}
                                            />
                                            Bar
                                          </label>
                                        </div>
                                      </Checkbox>
                                    </FinalCheckbox>
                                  </SingleCheckbox>
                                </div>
                                <HelpBlock
                                  bsClass="help-block"
                                >
                                  <span
                                    className="help-block"
                                  >
                                    Required
                                  </span>
                                </HelpBlock>
                              </div>
                            </FormGroup>
                          </Wrapper>
                        </MultipleChoiceList>
                      </MultipleChoiceList>
                    </Checkbox>
                  </FormFieldHideWrapper>
                </FormConditionWrapper>
              </SingleField>
              <Component>
                <FormControls
                  Button={[Function]}
                  ButtonGroup={[Function]}
                  FormSpy={[Function]}
                  buttonOrder={
                    Array [
                      "submit",
                      "reset",
                      "cancel",
                    ]
                  }
                  buttonsProps={Object {}}
                  canReset={false}
                  canSubmit={false}
                  cancelLabel="Cancel"
                  formFields={
                    Array [
                      <SingleField
                        component="checkbox"
                        name="checkbox"
                        options={
                          Array [
                            Object {
                              "label": "Foo",
                              "value": 0,
                            },
                            Object {
                              "label": "Bar",
                              "value": 1,
                            },
                          ]
                        }
                        validate={
                          Array [
                            Object {
                              "type": "required",
                            },
                          ]
                        }
                      />,
                    ]
                  }
                  formSpyProps={
                    Object {
                      "active": undefined,
                      "afterSilentRegistration": [Function],
                      "batch": [Function],
                      "blur": [Function],
                      "change": [Function],
                      "destroyOnUnregister": undefined,
                      "dirty": false,
                      "dirtyFields": Object {},
                      "dirtyFieldsSinceLastSubmit": Object {},
                      "dirtySinceLastSubmit": false,
                      "error": undefined,
                      "errors": Object {
                        "checkbox": "Required",
                      },
                      "fieldListeners": Object {
                        "1606921328826": Object {
                          "count": 1,
                          "fields": Object {
                            "1606921328826": Object {
                              "afterSubmit": undefined,
                              "beforeSubmit": undefined,
                              "isEqual": undefined,
                              "render": [Function],
                              "subscription": Object {
                                "all": true,
                              },
                              "validate": undefined,
                            },
                          },
                          "validateFields": undefined,
                        },
                        "1606921340740": Object {
                          "count": 1,
                          "fields": Object {
                            "1606921340740": Object {
                              "afterSubmit": undefined,
                              "beforeSubmit": undefined,
                              "isEqual": undefined,
                              "render": [Function],
                              "subscription": Object {
                                "pristine": true,
                                "submitting": true,
                                "valid": true,
                              },
                              "validate": undefined,
                            },
                          },
                          "validateFields": undefined,
                        },
                        "checkbox": Object {
                          "asyncWatcher": Object {
                            "registerValidator": [Function],
                          },
                          "count": 3,
                          "fields": Object {
                            "1606921332206": Object {
                              "afterSubmit": undefined,
                              "beforeSubmit": undefined,
                              "isEqual": undefined,
                              "render": [Function],
                              "subscription": undefined,
                              "validate": undefined,
                            },
                            "1606921342936": Object {
                              "afterSubmit": undefined,
                              "beforeSubmit": undefined,
                              "isEqual": undefined,
                              "render": [Function],
                              "subscription": undefined,
                              "validate": [Function],
                            },
                            "1606921351432": Object {
                              "afterSubmit": undefined,
                              "beforeSubmit": undefined,
                              "isEqual": undefined,
                              "render": [Function],
                              "subscription": undefined,
                              "validate": undefined,
                            },
                          },
                          "state": Object {
                            "meta": Object {
                              "active": false,
                              "data": Object {},
                              "dirty": false,
                              "dirtySinceLastSubmit": false,
                              "error": "Required",
                              "initial": undefined,
                              "invalid": true,
                              "modified": false,
                              "modifiedSinceLastSubmit": false,
                              "pristine": true,
                              "submitError": undefined,
                              "submitFailed": false,
                              "submitSucceeded": false,
                              "submitting": false,
                              "touched": true,
                              "valid": false,
                              "validating": false,
                              "visited": false,
                              "warning": undefined,
                            },
                            "name": "checkbox",
                            "value": undefined,
                          },
                          "validateFields": undefined,
                        },
                      },
                      "fileInputs": Array [],
                      "focus": [Function],
                      "form": Object {
                        "active": undefined,
                        "afterSilentRegistration": [Function],
                        "batch": [Function],
                        "blur": [Function],
                        "change": [Function],
                        "destroyOnUnregister": undefined,
                        "dirty": false,
                        "dirtyFields": Object {},
                        "dirtyFieldsSinceLastSubmit": Object {},
                        "dirtySinceLastSubmit": false,
                        "error": undefined,
                        "errors": Object {
                          "checkbox": "Required",
                        },
                        "fieldListeners": Object {
                          "1606921328826": Object {
                            "count": 1,
                            "fields": Object {
                              "1606921328826": Object {
                                "afterSubmit": undefined,
                                "beforeSubmit": undefined,
                                "isEqual": undefined,
                                "render": [Function],
                                "subscription": Object {
                                  "all": true,
                                },
                                "validate": undefined,
                              },
                            },
                            "validateFields": undefined,
                          },
                          "1606921340740": Object {
                            "count": 1,
                            "fields": Object {
                              "1606921340740": Object {
                                "afterSubmit": undefined,
                                "beforeSubmit": undefined,
                                "isEqual": undefined,
                                "render": [Function],
                                "subscription": Object {
                                  "pristine": true,
                                  "submitting": true,
                                  "valid": true,
                                },
                                "validate": undefined,
                              },
                            },
                            "validateFields": undefined,
                          },
                          "checkbox": Object {
                            "asyncWatcher": Object {
                              "registerValidator": [Function],
                            },
                            "count": 3,
                            "fields": Object {
                              "1606921332206": Object {
                                "afterSubmit": undefined,
                                "beforeSubmit": undefined,
                                "isEqual": undefined,
                                "render": [Function],
                                "subscription": undefined,
                                "validate": undefined,
                              },
                              "1606921342936": Object {
                                "afterSubmit": undefined,
                                "beforeSubmit": undefined,
                                "isEqual": undefined,
                                "render": [Function],
                                "subscription": undefined,
                                "validate": [Function],
                              },
                              "1606921351432": Object {
                                "afterSubmit": undefined,
                                "beforeSubmit": undefined,
                                "isEqual": undefined,
                                "render": [Function],
                                "subscription": undefined,
                                "validate": undefined,
                              },
                            },
                            "state": Object {
                              "meta": Object {
                                "active": false,
                                "data": Object {},
                                "dirty": false,
                                "dirtySinceLastSubmit": false,
                                "error": "Required",
                                "initial": undefined,
                                "invalid": true,
                                "modified": false,
                                "modifiedSinceLastSubmit": false,
                                "pristine": true,
                                "submitError": undefined,
                                "submitFailed": false,
                                "submitSucceeded": false,
                                "submitting": false,
                                "touched": true,
                                "valid": false,
                                "validating": false,
                                "visited": false,
                                "warning": undefined,
                              },
                              "name": "checkbox",
                              "value": undefined,
                            },
                            "validateFields": undefined,
                          },
                        },
                        "fileInputs": Array [],
                        "focus": [Function],
                        "getFieldState": [Function],
                        "getFieldValue": [Function],
                        "getRegisteredFields": [Function],
                        "getState": [Function],
                        "handleSubmit": [Function],
                        "hasSubmitErrors": false,
                        "hasValidationErrors": true,
                        "initialValues": Object {},
                        "initialize": [Function],
                        "invalid": true,
                        "isValidationPaused": [Function],
                        "modified": Object {},
                        "modifiedSinceLastSubmit": false,
                        "pauseValidation": [Function],
                        "pristine": true,
                        "registerAsyncValidator": [Function],
                        "registerField": [Function],
                        "registerInputFile": [Function],
                        "registeredFields": Array [
                          "checkbox",
                        ],
                        "rerender": [Function],
                        "reset": [Function],
                        "resetFieldState": [Function],
                        "restart": [Function],
                        "resumeValidation": [Function],
                        "setConfig": [Function],
                        "setFieldState": [Function],
                        "submit": [Function],
                        "submitError": undefined,
                        "submitErrors": undefined,
                        "submitFailed": false,
                        "submitSucceeded": false,
                        "submitting": false,
                        "subscribe": [Function],
                        "touched": Object {},
                        "unregisterField": [Function],
                        "unregisterInputFile": [Function],
                        "unsubscribe": [Function],
                        "updateError": [Function],
                        "updateValid": [Function],
                        "valid": false,
                        "validating": false,
                        "values": Object {},
                        "visited": Object {},
                      },
                      "getFieldState": [Function],
                      "getFieldValue": [Function],
                      "getRegisteredFields": [Function],
                      "getState": [Function],
                      "handleSubmit": [Function],
                      "hasSubmitErrors": false,
                      "hasValidationErrors": true,
                      "initialValues": Object {},
                      "initialize": [Function],
                      "invalid": true,
                      "isValidationPaused": [Function],
                      "modified": Object {},
                      "modifiedSinceLastSubmit": false,
                      "pauseValidation": [Function],
                      "pristine": true,
                      "registerAsyncValidator": [Function],
                      "registerField": [Function],
                      "registerInputFile": [Function],
                      "registeredFields": Array [
                        "checkbox",
                      ],
                      "rerender": [Function],
                      "reset": [Function],
                      "resetFieldState": [Function],
                      "restart": [Function],
                      "resumeValidation": [Function],
                      "setConfig": [Function],
                      "setFieldState": [Function],
                      "submit": [Function],
                      "submitError": undefined,
                      "submitErrors": undefined,
                      "submitFailed": false,
                      "submitSucceeded": false,
                      "submitting": false,
                      "subscribe": [Function],
                      "touched": Object {},
                      "unregisterField": [Function],
                      "unregisterInputFile": [Function],
                      "unsubscribe": [Function],
                      "updateError": [Function],
                      "updateValid": [Function],
                      "valid": false,
                      "validating": false,
                      "values": Object {},
                      "visited": Object {},
                    }
                  }
                  onReset={[Function]}
                  resetLabel="Reset"
                  schema={
                    Object {
                      "fields": Array [
                        Object {
                          "component": "checkbox",
                          "name": "checkbox",
                          "options": Array [
                            Object {
                              "label": "Foo",
                              "value": 0,
                            },
                            Object {
                              "label": "Bar",
                              "value": 1,
                            },
                          ],
                          "validate": Array [
                            Object {
                              "type": "required",
                            },
                          ],
                        },
                      ],
                    }
                  }
                  submitLabel="Submit"
                >
                  <ButtonGroup
                    className=""
                  >
                    <div
                      className="ddorg__pf3-layout-components__button-group "
                    >
                      <Button
                        buttonType="submit"
                        key="form-submit"
                        label="Submit"
                        type="submit"
                        variant="primary"
                      >
                        <Button
                          active={false}
                          block={false}
                          bsClass="btn"
                          bsStyle="primary"
                          disabled={false}
                          type="submit"
                        >
                          <button
                            className="btn btn-primary"
                            disabled={false}
                            type="submit"
                          >
                            Submit
                          </button>
                        </Button>
                      </Button>
                    </div>
                  </ButtonGroup>
                </FormControls>
              </Component>
            </form>
          </Form>
        </FormWrapper>
      </FormTemplate>
    </PF3FormTemplate>
  </Component>
</FormRenderer>
`;
